manifests/course1/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    purpose: development
