manifests/course1/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    purpose: production
