manifests/course1/namespaceaws.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: aws-namespace
 annotations:
   scheduler.alpha.kubernetes.io/node-selector: provider=aws
spec: {}
status: {}
