manifests/course1/deploy-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devpod1-deployment
  namespace: development
  labels:
    deploy: devapp1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devapp1
  template:
    metadata:
      labels:
        app: devapp1
    spec:
      containers:
      - name: devctd1
        image: capso/capsonet:latest
        imagePullPolicy: Always
