manifests/course1/deploy-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodpod1-deployment
  namespace: production
  labels:
    app: prodpod1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prodpod1
  template:
    metadata:
      labels:
        app: prodpod1
    spec:
      containers:
      - name: prodctd1
        image: capso/capsonet:latest
        imagePullPolicy: Always
