manifests/course1/pod-bd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dbpod1 
  labels:
    app: dbpod1
spec:
  containers:
  - name: dbctd1
    image: capso/capsomysql:latest
