manifests/course1/pod-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devpod1 
  namespace: development
  labels:
    app: devpod1
spec:
  containers:
  - name: devctd1
    image: forgetfr/mgmtnet:latest
