manifests/course1/pod-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prodpod1 
  namespace: production 
  labels:
    app: prodpod1
spec:
  containers:
  - name: prodctd1
    image: capso/capsonet:latest
