manifests/course1/pod-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webpod1 
  labels:
    app: webpod1
spec:
  containers:
  - name: webctd1
    image: capso/capsoweb:latest
