manifests/course1/appInEm.yaml
######################################### namespace
---
# Create the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ns-srv-inem
  labels:
    purpose: production
    srv: srv-inem
    owner: ti-sercom
---
# Deploy the web application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-app-inem
  namespace: ns-srv-inem
  labels:
    deploy: app-inem
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-inem
  template:
    metadata:
      labels:
        app: app-inem
        tier: frontend
    spec:
      containers:
      - name: app-inem
        image: capso/capsoweb:latest
        imagePullPolicy: Always
        resources:
            limits:
              memory: 600Mi
              cpu: 1
            requests:
              memory: 300Mi
              cpu: 100m
        ports:
        - containerPort: 80
          name: app-inem-port
---
# Create a service for the frontend app to expose the application 
# that is running as one or more Pods
apiVersion: v1
kind: Service
metadata:
  name: inem
  namespace: ns-srv-inem
spec:
  selector:
    name: app-inem
  ports:
    - name: srv-app-inem
      protocol: TCP
      port: 8080
      targetPort: app-inem-port
######################################### backend
---
apiVersion: v1
kind: Pod
metadata:
  name: pd-bd-inem
  namespace: ns-srv-inem 
  labels:
    tier: backend
spec:
  containers:
  - name: bd-inem
    image: capso/capsomysql:latest
    imagePullPolicy: Always
    resources:
        limits:
          memory: 600Mi
          cpu: 1
        requests:
          memory: 300Mi
          cpu: 100m    
    ports:
    - containerPort: 3306
      name: bd-inem-port
---
# Create a service for the mysql
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ns-srv-inem
  labels:
    app: bd-inem
spec:
  ports:
    - port: 3306
  selector:
    app: bd-inem
    tier: inem-mysql
  clusterIP: None
