manifests/course1/tmp.yaml
apiVersion: v1
kind: Service
metadata:
  name: inem
  namespace: ns-srv-inem
spec:
  type: NodePort
  selector:
    tier: frontend
  ports:
    - name: srv-app-inem
      protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 31080
