manifests/course1/tmp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: inem-mysql
  namespace: ns-srv-inem
spec:
  ports:
    - name: srv-bd-inem
      protocol: TCP
      port: 3306
      targetPort: bd-inem-port
  selector:
    tier: backend
