manifests/course1/netpo-dev-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: development-deny-ingress
  namespace: development
spec:
  podSelector: {}
  policyTypes:
  - Ingress
