manifests/course1/netpo-dev-allowSSHfromdefault.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: development-accept-ingress-ssh-from-defaultnamespace
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: devapp1
  ingress:
    - ports: 
        - protocol: TCP
          port: 22
      from:
      - namespaceSelector:
          matchLabels:
             name: default
        podSelector: {}
