manifests/course1/netpo-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: development-deny-ingress
  namespace: development
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:  
          name: development
