manifests/course1/netpo-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: production-deny-ingress
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: prodapp1
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:  
          purpose: production
